--- a/Display/Control/ControlTenKey.xaml
+++ b/Display/Control/ControlTenKey.xaml
@@ -32,21 +32,30 @@
                 <RowDefinition Height="110"/>
                 <RowDefinition Height="10"/>
             </Grid.RowDefinitions>
-            <Button Grid.Row="1" Grid.Column="1" Content="7" Command="{Binding CommandButton}" CommandParameter="7" Style="{StaticResource TenKey}">
+            <Button Grid.Row="1" Grid.Column="1" Command="{Binding CommandButton}" CommandParameter="7" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="7" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="7"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="1" Grid.Column="3" Content="8" Command="{Binding CommandButton}" CommandParameter="8" Style="{StaticResource TenKey}">
+            <Button Grid.Row="1" Grid.Column="3" Command="{Binding CommandButton}" CommandParameter="8" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="8" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="8"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="1" Grid.Column="5" Content="9" Command="{Binding CommandButton}" CommandParameter="9" Style="{StaticResource TenKey}">
+            <Button Grid.Row="1" Grid.Column="5" Command="{Binding CommandButton}" CommandParameter="9" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="9" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="9"/>
@@ -54,79 +63,109 @@
                 </i:Interaction.Triggers>
             </Button>
             <Button Grid.Row="1" Grid.Column="7" Command="{Binding CommandButton}" CommandParameter="BS" Style="{StaticResource TenKey}">
-                <WrapPanel>
-                    <materialDesign:PackIcon Kind="KeyboardBackspace" Margin="0,0,0,0" Height="60" Width="60" />
-                </WrapPanel>
+                <Viewbox Stretch="Uniform">
+                    <materialDesign:PackIcon Kind="KeyboardBackspace" Margin="15,15,15,15" Height="60" Width="60" />
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="BS"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="3" Grid.Column="1" Content="4" Command="{Binding CommandButton}" CommandParameter="4" Style="{StaticResource TenKey}">
+            <Button Grid.Row="3" Grid.Column="1" Command="{Binding CommandButton}" CommandParameter="4" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="4" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="4"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="3" Grid.Column="3" Content="5" Command="{Binding CommandButton}" CommandParameter="5" Style="{StaticResource TenKey}">
+            <Button Grid.Row="3" Grid.Column="3" Command="{Binding CommandButton}" CommandParameter="5" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="5" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="5"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="3" Grid.Column="5" Content="6" Command="{Binding CommandButton}" CommandParameter="6" Style="{StaticResource TenKey}">
+            <Button Grid.Row="3" Grid.Column="5" Command="{Binding CommandButton}" CommandParameter="6" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="6" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="6"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="3" Grid.Column="7" Content="クリア" Command="{Binding CommandButton}" CommandParameter="CLEAR" Style="{StaticResource TenKey}" FontSize="35">
+            <Button Grid.Row="3" Grid.Column="7" Command="{Binding CommandButton}" CommandParameter="CLEAR" Style="{StaticResource TenKey}" FontSize="35">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="クリア" Foreground="#FFFFFF" Margin="0,0,0,0"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="CLEAR"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="5" Grid.Column="1" Content="1" Command="{Binding CommandButton}" CommandParameter="1" Style="{StaticResource TenKey}">
+            <Button Grid.Row="5" Grid.Column="1" Command="{Binding CommandButton}" CommandParameter="1" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="1" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="1"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="5" Grid.Column="3" Content="2" Command="{Binding CommandButton}" CommandParameter="2" Style="{StaticResource TenKey}">
+            <Button Grid.Row="5" Grid.Column="3" Command="{Binding CommandButton}" CommandParameter="2" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="2" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="2"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="5" Grid.Column="5" Content="3" Command="{Binding CommandButton}" CommandParameter="3" Style="{StaticResource TenKey}">
+            <Button Grid.Row="5" Grid.Column="5" Command="{Binding CommandButton}" CommandParameter="3" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="3" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="3"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="5" Grid.Column="7" Grid.RowSpan="3" Content="確定" Command="{Binding CommandButton}" CommandParameter="Enter" Style="{StaticResource TenKey}" Height="230" FontSize="35">
+            <Button Grid.Row="5" Grid.Column="7" Grid.RowSpan="3" Command="{Binding CommandButton}" CommandParameter="Enter" Style="{StaticResource TenKey}" Height="230" FontSize="35">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="確定" Foreground="#FFFFFF"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Enter"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="3" Content="0" Command="{Binding CommandButton}" CommandParameter="0" Style="{StaticResource TenKey}" Width="230">
+            <Button Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="3" Command="{Binding CommandButton}" CommandParameter="0" Style="{StaticResource TenKey}" Width="230">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="0" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="0"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
-            <Button Grid.Row="7" Grid.Column="5" Content="{Binding InputString,FallbackValue=.}" Command="{Binding CommandButton}" CommandParameter="{Binding InputString,FallbackValue=.}" Style="{StaticResource TenKey}">
+            <Button Grid.Row="7" Grid.Column="5" Command="{Binding CommandButton}" CommandParameter="{Binding InputString,FallbackValue=.}" Style="{StaticResource TenKey}">
+                <Viewbox Stretch="Uniform">
+                    <TextBlock Text="{Binding InputString,FallbackValue=.}" Style="{StaticResource TenKeyString}"/>
+                </Viewbox>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="TouchDown">
                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="{Binding InputString,FallbackValue=.}"/>
