--- a/Display/PlanList.xaml
+++ b/Display/PlanList.xaml
@@ -36,9 +36,9 @@
                     </Grid.ColumnDefinitions>
                     <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Visibility="{Binding VisibleUnit,Converter={StaticResource CollapsedConverter}}">
                         <Button Command="{Binding CommandButton}" CommandParameter="Sheet" Style="{StaticResource Search}" Height="35" FontSize="22">
-                            <WrapPanel>
+                            <Viewbox Stretch="Uniform">
                                 <TextBlock Text="シート"/>
-                            </WrapPanel>
+                            </Viewbox>
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="TouchDown">
                                     <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Sheet"/>
@@ -46,9 +46,9 @@
                             </i:Interaction.Triggers>
                         </Button>
                         <Button Command="{Binding CommandButton}" CommandParameter="Coil" Style="{StaticResource Search}" Height="35" FontSize="22">
-                            <WrapPanel>
+                            <Viewbox Stretch="Uniform">
                                 <TextBlock Text="コイル"/>
-                            </WrapPanel>
+                            </Viewbox>
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="TouchDown">
                                     <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Coil"/>
@@ -56,7 +56,9 @@
                             </i:Interaction.Triggers>
                         </Button>
                     </StackPanel>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding UpdateDate,FallbackValue=2024年6月版}" Style="{StaticResource TextDate}"/>
+                    <Viewbox Grid.Column="1" Grid.Row="0" Stretch="Uniform">
+                        <TextBlock Text="{Binding UpdateDate,FallbackValue=2024年6月版}" Style="{StaticResource TextDate}"/>
+                    </Viewbox>
                 </Grid>
                 <DataGrid Grid.Column="0" Grid.Row="1" ItemsSource="{Binding SelectTable}" SelectedIndex="{Binding SelectedIndex}" SelectedItem="{Binding SelectedItem}"
                           ColumnHeaderStyle="{StaticResource DefultHeader}">
