--- a/Display/Setting.xaml
+++ b/Display/Setting.xaml
@@ -39,9 +39,15 @@
                         <RowDefinition Height="70"/>
                         <RowDefinition Height="70"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Ver"/>
-                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Version}" FontWeight="Bold"/>
-                    <TextBlock Grid.Row="1" Grid.Column="0" Text="接続先"/>
+                    <Viewbox Grid.Row="0" Grid.Column="0" Style="{StaticResource Label}">
+                        <TextBlock Text="Ver"/>
+                    </Viewbox>
+                    <Viewbox Grid.Row="0" Grid.Column="1" Style="{StaticResource Label}">
+                        <TextBlock Text="{Binding Version,FallbackValue=1.0.0}" FontWeight="Bold"/>
+                    </Viewbox>
+                    <Viewbox Grid.Row="1" Grid.Column="0" Style="{StaticResource Label}">
+                        <TextBlock Text="接続先"/>
+                    </Viewbox>
                     <ComboBox Grid.Row="1" Grid.Column="1" x:Name="ComboBoxServer" Text="{Binding Server}" ItemsSource="{Binding Servers}" IsDropDownOpen="{Binding IsServer}" HorizontalAlignment="Stretch">
                         <ComboBox.Resources>
                             <Style TargetType="ComboBox" BasedOn="{StaticResource ComboBox}">
@@ -61,8 +67,12 @@
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
                     </ComboBox>
-                    <TextBlock Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Text="※システム再起動で反映" VerticalAlignment="Top" Foreground="#FFFF0000" FontSize="20" FontWeight="Bold"/>
-                    <TextBlock Grid.Row="3" Grid.Column="0" Text="工程区分"/>
+                    <Viewbox Grid.Row="2" Grid.Column="1" Style="{StaticResource Label}" Margin="0,0,45,45">
+                        <TextBlock Grid.ColumnSpan="2" Text="※システム再起動で反映" VerticalAlignment="Top" Foreground="#FFFF0000" FontWeight="Bold"/>
+                    </Viewbox>
+                    <Viewbox Grid.Row="3" Grid.Column="0" Style="{StaticResource Label}">
+                        <TextBlock Text="工程区分"/>
+                    </Viewbox>
                     <ComboBox Grid.Row="3" Grid.Column="1" Text="{Binding ProcessName}" ItemsSource="{Binding ProcessNames}" IsDropDownOpen="{Binding IsProcessName}" HorizontalAlignment="Stretch" Margin="0,0,180,0">
                         <i:Interaction.Behaviors>
                             <local:ComboBoxBehavior/>
@@ -73,7 +83,9 @@
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
                     </ComboBox>
-                    <TextBlock Grid.Row="4" Grid.Column="0" Text="設 備"/>
+                    <Viewbox Grid.Row="4" Grid.Column="0" Style="{StaticResource Label}">
+                        <TextBlock Text="設 備"/>
+                    </Viewbox>
                     <ComboBox Grid.Row="4" Grid.Column="1" Text="{Binding EquipmentCODE}" ItemsSource="{Binding EquipmentCODES}" IsDropDownOpen="{Binding IsEquipment}" HorizontalAlignment="Stretch" Margin="0,0,50,0">
                         <i:Interaction.Behaviors>
                             <local:ComboBoxBehavior/>
@@ -84,7 +96,9 @@
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
                     </ComboBox>
-                    <TextBlock Grid.Row="5" Grid.Column="0" Text="担当者"/>
+                    <Viewbox Grid.Row="5" Grid.Column="0" Style="{StaticResource Label}">
+                        <TextBlock Text="担当者"/>
+                    </Viewbox>
                     <ComboBox Grid.Row="5" Grid.Column="1" Text="{Binding Worker}" ItemsSource="{Binding Workers}" IsDropDownOpen="{Binding IsWorker}" HorizontalAlignment="Stretch" Margin="0,0,50,0" >
                         <i:Interaction.Behaviors>
                             <local:ComboBoxBehavior/>
@@ -107,10 +121,12 @@
                     </Grid.RowDefinitions>
                     <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
                         <Button Style="{StaticResource Select}" Command="{Binding CommandButton}" CommandParameter="SQL" Margin="0,0,0,0">
-                            <WrapPanel>
-                                <materialDesign:PackIcon Kind="Database" Margin="0,3,10,0" Height="30" Width="30"/>
-                                <TextBlock Text="SQL" FontWeight="Medium"/>
-                            </WrapPanel>
+                            <Viewbox Style="{StaticResource Button}">
+                                <WrapPanel>
+                                    <materialDesign:PackIcon Kind="Database" Margin="0,3,10,0" Height="30" Width="30"/>
+                                    <TextBlock Text="SQL" FontWeight="Medium"/>
+                                </WrapPanel>
+                            </Viewbox>
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="TouchDown">
                                     <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="SQL"/>
@@ -118,10 +134,12 @@
                             </i:Interaction.Triggers>
                         </Button>
                         <Button Style="{StaticResource Select}" Command="{Binding CommandButton}" CommandParameter="Error" Margin="10,0,0,0">
-                            <WrapPanel>
-                                <materialDesign:PackIcon Kind="Error" Margin="0,3,10,0" Height="30" Width="30"/>
-                                <TextBlock Text="Error" FontWeight="Medium"/>
-                            </WrapPanel>
+                            <Viewbox Style="{StaticResource Button}">
+                                <WrapPanel>
+                                    <materialDesign:PackIcon Kind="Error" Margin="0,3,10,0" Height="30" Width="30"/>
+                                    <TextBlock Text="Error" FontWeight="Medium"/>
+                                </WrapPanel>
+                            </Viewbox>
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="TouchDown">
                                     <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Error"/>
@@ -129,10 +147,12 @@
                             </i:Interaction.Triggers>
                         </Button>
                         <Button Style="{StaticResource Select}" Command="{Binding CommandButton}" CommandParameter="Debug" Margin="10,0,0,0">
-                            <WrapPanel>
-                                <materialDesign:PackIcon Kind="Bug" Margin="0,3,10,0" Height="30" Width="30"/>
-                                <TextBlock Text="Debug" FontWeight="Medium"/>
-                            </WrapPanel>
+                            <Viewbox Style="{StaticResource Button}">
+                                <WrapPanel>
+                                    <materialDesign:PackIcon Kind="Bug" Margin="0,3,10,0" Height="30" Width="30"/>
+                                    <TextBlock Text="Debug" FontWeight="Medium"/>
+                                </WrapPanel>
+                            </Viewbox>
                             <i:Interaction.Triggers>
                                 <i:EventTrigger EventName="TouchDown">
                                     <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Debug"/>
@@ -154,10 +174,12 @@
         <Grid Grid.Row="1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Center">
                 <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="Regist">
-                    <WrapPanel>
-                        <materialDesign:PackIcon Kind="PenAdd" Margin="0,3,20,0" Height="30" Width="30"/>
-                        <TextBlock Text="登　録" FontWeight="Medium"/>
-                    </WrapPanel>
+                    <Viewbox Style="{StaticResource Button}">
+                        <WrapPanel>
+                            <materialDesign:PackIcon Kind="PenAdd" Margin="0,3,20,0" Height="30" Width="30"/>
+                            <TextBlock Text="登　録" FontWeight="Medium"/>
+                        </WrapPanel>
+                    </Viewbox>
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="TouchDown">
                             <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Regist"/>
@@ -165,10 +187,12 @@
                     </i:Interaction.Triggers>
                 </Button>
                 <Button Style="{StaticResource Bottom}" Command="{Binding CommandButton}" CommandParameter="Cancel" Margin="10,0,0,0">
-                    <WrapPanel>
-                        <materialDesign:PackIcon Kind="Erase" Margin="0,3,20,0" Height="30" Width="30"/>
-                        <TextBlock Text="取　消" FontWeight="Medium"/>
-                    </WrapPanel>
+                    <Viewbox Style="{StaticResource Button}">
+                        <WrapPanel>
+                            <materialDesign:PackIcon Kind="Erase" Margin="0,3,20,0" Height="30" Width="30"/>
+                            <TextBlock Text="取　消" FontWeight="Medium"/>
+                        </WrapPanel>
+                    </Viewbox>
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="TouchDown">
                             <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="Cancel"/>
